--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,25 @@ edition = "2021"
 [dependencies]
 enigo = "0.3.0"
 rdev = "0.5.3"
+reqwest = "0.12.15"
 rig-core = "0.10.0"
+serde = "1.0.219"
 tokio = { version = "1", features = ["full"] }
+futures = "0.3"
+parking_lot = "0.12"
+once_cell = "1.21.3"
+
+[profile.release]
+lto = "fat"       # Link Time Optimization, "fat" aplica otimizações mais agressivas
+opt-level = 3
+codegen-units = 1
+strip = "symbols" # set to `false` for debug information
+debug = false     # set to `true` for debug information
+panic = "abort"   # Let it crash and force ourselves to write safe Rust.
+# Profile for `cargo coverage`
+[profile.coverage]
+inherits = "release"
+lto = "thin"            # Faster compile time with thin lto
+debug-assertions = true # Make sure `debug_assert!`s pass
+opt-level = "z"         # minify
+strip = true
