--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Based on https://raw.githubusercontent.com/github/gitignore/main/Node.gitignore
 
 # Logs
+/migration/target
 
 logs
 _.log
@@ -10,6 +11,7 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+dotfiles
 
 models
 
