--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,17 @@
 [package]
-name = "ghost"
+name = "ghostai"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "ghost"
+path = "src/main.rs"
+
 [dependencies]
+sea-orm = { version = "1.1.10", features = [
+  "sqlx-sqlite",
+  "runtime-tokio-native-tls",
+] }
 enigo = "0.3.0"
 rdev = "0.5.3"
 reqwest = "0.12.15"
@@ -11,9 +19,7 @@ rig-core = "0.10.0"
 serde = "1.0.219"
 tokio = { version = "1", features = ["full"] }
 futures = "0.3"
-# parking_lot = "0.12"
 once_cell = "1.21.3"
-# screenshots = "0.8.10"
 xcap = "0.4.1"
 fs_extra = "1.3.0"
 base64 = "0.22.1"
@@ -23,6 +29,18 @@ ocrs = "0.10.0"
 rten = "0.16.0"
 blake3 = "1.8.1"
 chrono = "0.4.40"
+axum = "0.8.3"
+async-stream = "0.3.6"
+tower-http = { version = "0.6.2", features = ["cors"] }
+diesel = "2.2.9"
+dirs = "6.0.0"
+toml = "0.8.20"
+sqlx = "0.8.5"
+futures-util = "0.3.31"
+tokio-stream = "0.1.17"
+colored = "3.0.0"
+crossterm = "0.29.0"
+textwrap = "0.16.2"
 
 [profile.release]
 lto = "fat"       # Link Time Optimization, "fat" aplica otimizações mais agressivas
