--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "ghostai"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
+description = "Your second brain at the computer."
+authors = ["Yazalde Filimone <yazaldefilimon@gmail.com>"]
+repository = "https://github.com/yazaldefilimone/ghost.ai"
+license = "Apache-2.0"
 
 [[bin]]
 name = "ghost"
