--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,6 @@ xcap = "0.4.1"
 fs_extra = "1.3.0"
 base64 = "0.22.1"
 image = "0.25.6"
-arboard = "3.5.0"
 ocrs = "0.10.0"
 rten = "0.16.0"
 blake3 = "1.8.1"
@@ -36,7 +35,6 @@ chrono = "0.4.40"
 axum = "0.8.3"
 async-stream = "0.3.6"
 tower-http = { version = "0.6.2", features = ["cors"] }
-diesel = "2.2.9"
 dirs = "6.0.0"
 toml = "0.8.20"
 sqlx = "0.8.5"
@@ -44,21 +42,21 @@ futures-util = "0.3.31"
 tokio-stream = "0.1.17"
 colored = "3.0.0"
 crossterm = "0.29.0"
-textwrap = "0.16.2"
+clap = { version = "4.5.37", features = ["derive"] }
+migration = { path = "migration" }
 
 [profile.release]
-lto = "fat"       # Link Time Optimization, "fat" aplica otimizações mais agressivas
+lto = "fat"
 opt-level = 3
 codegen-units = 1
-strip = "symbols" # set to `false` for debug information
-debug = false     # set to `true` for debug information
-panic = "abort"   # Let it crash and force ourselves to write safe Rust.
-# Profile for `cargo coverage`
+strip = "symbols"
+debug = false
+panic = "abort"
 [profile.coverage]
 inherits = "release"
-lto = "thin"            # Faster compile time with thin lto
-debug-assertions = true # Make sure `debug_assert!`s pass
-opt-level = "z"         # minify
+lto = "thin"
+debug-assertions = true
+opt-level = "z"
 strip = true
 [profile.dev.package."ocrs"]
 opt-level = 3
