--- a/migration/Cargo.toml
+++ b/migration/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
-name = "migration"
+name = "ghost_migration"
 version = "0.1.0"
 edition = "2021"
-publish = false
-
+description = "Your second brain at the computer."
+authors = ["Yazalde Filimone <yazaldefilimon@gmail.com>"]
+repository = "https://github.com/yazaldefilimone/ghost.ai"
+license = "Apache-2.0"
 [lib]
 name = "migration"
 path = "src/lib.rs"
@@ -14,12 +16,4 @@ dirs = "6.0.0"
 
 [dependencies.sea-orm-migration]
 version = "1.1.0"
-features = [
-  "sqlx-sqlite",
-  "runtime-tokio-native-tls",
-  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
-  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
-  # e.g.
-  # "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
-  # "sqlx-postgres",         # `DATABASE_DRIVER` feature
-]
+features = ["sqlx-sqlite", "runtime-tokio-native-tls"]
