--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ghostai"
-version = "0.2.1-beta"
+version = "0.2.2-beta"
 edition = "2021"
 description = "Your second brain at the computer."
 authors = ["Yazalde Filimone <yazaldefilimon@gmail.com>"]
@@ -45,6 +45,8 @@ colored = "3.0.0"
 crossterm = "0.29.0"
 clap = { version = "4.5.37", features = ["derive"] }
 ghost_migration = "0.1.0"
+regex = "1.11.1"
+sqlite-vec = "0.1.6"
 [profile.release]
 lto = "fat"
 opt-level = 3
